[gd_scene load_steps=13 format=3 uid="uid://2lxmwbgsphcx"]

[ext_resource type="Script" path="res://scenes/system/GameManager.gd" id="1_x0ony"]
[ext_resource type="Resource" uid="uid://bw5v44mo7mgol" path="res://resources/leveldatas/lvGD.tres" id="2_gk51o"]
[ext_resource type="FontFile" uid="uid://boi1da7s5xidb" path="res://resources/HelvetiHand.ttf" id="3_aail4"]
[ext_resource type="Texture2D" uid="uid://culf8v7adle77" path="res://resources/sprites/objects/yes_tile_ui.png" id="4_ml3am"]
[ext_resource type="LabelSettings" uid="uid://d3afljcnl3gnb" path="res://resources/tiles_left_label.tres" id="5_njgu5"]
[ext_resource type="Texture2D" uid="uid://bushsdnoic7pd" path="res://resources/sprites/objects/no_tile_ui.png" id="6_g7vc8"]
[ext_resource type="AudioStream" uid="uid://c68x2lam2lewr" path="res://resources/sounds/undo.wav" id="7_ldpwm"]
[ext_resource type="AudioStream" uid="uid://bwhj32uf8maxc" path="res://resources/sounds/lvup_kokuti.wav" id="8_otltl"]
[ext_resource type="PackedScene" uid="uid://r6j1n35055hn" path="res://scenes/BG.tscn" id="9_fpgjc"]
[ext_resource type="PackedScene" uid="uid://p38cn72r7q1m" path="res://scenes/ui/SceneChangeButton.tscn" id="10_irx6y"]

[sub_resource type="LabelSettings" id="LabelSettings_l5ebs"]
font = ExtResource("3_aail4")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_groea"]
font = ExtResource("3_aail4")
font_size = 24

[node name="Main" type="Node2D"]

[node name="GameManager" type="Node2D" parent="."]
script = ExtResource("1_x0ony")
lv_data = ExtResource("2_gk51o")

[node name="Control" type="Control" parent="GameManager"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Lv" type="Label" parent="GameManager/Control"]
layout_mode = 0
offset_left = 35.0
offset_top = 29.0
offset_right = 132.0
offset_bottom = 74.0
text = "Level 1"
label_settings = SubResource("LabelSettings_l5ebs")

[node name="Title" type="Label" parent="GameManager/Control"]
layout_mode = 0
offset_left = 38.0
offset_top = 83.0
offset_right = 88.0
offset_bottom = 106.0
text = "title"
label_settings = SubResource("LabelSettings_groea")

[node name="YesTile" type="TextureRect" parent="GameManager/Control"]
layout_mode = 0
offset_left = 39.0
offset_top = 131.0
offset_right = 79.0
offset_bottom = 171.0
texture = ExtResource("4_ml3am")

[node name="YesTilesLeft" type="Label" parent="GameManager/Control/YesTile"]
layout_mode = 0
offset_left = 61.0
offset_top = 2.0
offset_right = 158.0
offset_bottom = 47.0
text = "1"
label_settings = ExtResource("5_njgu5")

[node name="NoTile" type="TextureRect" parent="GameManager/Control"]
visible = false
layout_mode = 0
offset_left = 38.0
offset_top = 186.0
offset_right = 78.0
offset_bottom = 226.0
texture = ExtResource("6_g7vc8")

[node name="NoTiles" type="Label" parent="GameManager/Control/NoTile"]
layout_mode = 0
offset_left = 62.0
offset_top = 2.0
offset_right = 159.0
offset_bottom = 47.0
text = "1"
label_settings = ExtResource("5_njgu5")

[node name="UndoSound" type="AudioStreamPlayer" parent="GameManager"]
stream = ExtResource("7_ldpwm")
volume_db = -3.0
bus = &"Sfx"

[node name="LevelClearSound" type="AudioStreamPlayer" parent="GameManager"]
stream = ExtResource("8_otltl")
volume_db = -10.0
bus = &"Sfx"

[node name="Timer" type="Timer" parent="GameManager"]
wait_time = 0.1
one_shot = true

[node name="BG" parent="." instance=ExtResource("9_fpgjc")]

[node name="BackButton" parent="." instance=ExtResource("10_irx6y")]
offset_left = 1000.0
offset_top = 24.0
offset_right = 1128.0
offset_bottom = 72.0
scene_to = "LevelSelect"
